--- a/dada/installer-disabled/templates/tinymce_config_js.tmpl
+++ b/dada/installer-disabled/templates/tinymce_config_js.tmpl
@@ -67,10 +67,10 @@ tinymce.init({
         "advlist autolink lists link image charmap preview hr anchor ",
         "searchreplace wordcount visualblocks visualchars code fullscreen",
         "nonbreaking table contextmenu directionality",
-        "emoticons paste textcolor"
+        "emoticons paste textcolor fullpage"
     ],
 
     toolbar1 : "undo redo  | bold italic underline strikethrough | alignleft aligncenter alignright alignjustify | styleselect | bullist numlist outdent indent | link image",
-    toolbar2 : "preview | forecolor backcolor emoticons code"
+    toolbar2 : "preview | forecolor backcolor emoticons code fullpage"
     
  });
