Getting ready for the GM release!

--- a/dada/templates/plugins/bridge/default.tmpl
+++ b/dada/templates/plugins/bridge/default.tmpl
@@ -629,7 +629,7 @@ General
 
 				<div class="buttonfloat"> 
 				  <input type="button"  class="processing view_moderators" value="View Moderators (<!-- tmpl_var moderators_count -->)"  />
-				  <input type="button" class="processing add_moderators" value="Add Moderatrs" />
+				  <input type="button" class="processing add_moderators" value="Add Moderators" />
 				 </div> 
 				 <div class="floatclear"></div> 
 
