This gives support for various regions/endpoints for Amazon SES

--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -1357,6 +1357,15 @@ editors also have the ability to make simple HTML tables for basic layouts.
 	
 		<!-- tmpl_var amazon_ses_requirements_widget -->
 
+
+        <p><label  style="width: 18em;float: left;text-align: right;margin-right: 0.5em;display: block" for="amazon_ses_AWS_endpoint">AWS Region/Endpoint:</label> 
+        	<select name="amazon_ses_AWS_endpoint" id="amazon_ses_AWS_endpoint"> 
+        		<option value="https://email.us-east-1.amazonaws.com/">US East (N. Virginia) Region (us-east-1)</option>
+    			<option value="https://email.us-west-2.amazonaws.com/">US West (Oregon) Region (us-west-2)</option> 
+    			<option value="https://email.eu-west-1.amazonaws.com/">EU (Ireland) Region (eu-west-1)</option>
+        	</select>
+        </p>
+        
 		<p>
 			<label style="width: 18em;float: left;text-align: right;margin-right: 0.5em;display: block" for="amazon_ses_AWSAccessKeyId">
 				AWS Access Key ID:
