--- a/dada/templates/example_dada_config.tmpl
+++ b/dada/templates/example_dada_config.tmpl
@@ -263,6 +263,7 @@ $CONFIRMATION_TOKEN_OPTIONS = {
 # Amazon SES Options
 
 $AMAZON_SES_OPTIONS = { 
+    AWS_endpoint   => '<!-- tmpl_var AWS_endpoint -->', 
 	AWSAccessKeyId => '<!-- tmpl_var AWSAccessKeyId -->', 
 	AWSSecretKey   => '<!-- tmpl_var AWSSecretKey -->', 
 };
