This puts some simple JS valuation on the unsubscribe screen

--- a/dada/templates/list_unsubscribe.tmpl
+++ b/dada/templates/list_unsubscribe.tmpl
@@ -47,7 +47,7 @@
 		that is currently Subscribed, below:
 	</p> 
 
-	<form action="<!-- tmpl_var PROGRAM_URL -->" method="post" /> 
+	<form action="<!-- tmpl_var PROGRAM_URL -->" method="post" id="unsubscription_form" /> 
 		<input type="hidden" id="flavor" name="flavor" value="u" />
 		<input type="hidden" id="token" name="token" value="<!-- tmpl_var token  escape="HTML" -->" /> 
 		<input type="hidden" id="process" name="process" value="1" /> 
