This disables the, "_check4htacces"... check, as it's ridiculous: not only does it check for an .htaccess file, which is good! But it checks for the exact .htaccess file it wants, which is bad bad bad, since this .htaccess file is very much wrong. Sigh.

--- a/dada/installer-disabled/templates/kcfinder_config_php.tmpl
+++ b/dada/installer-disabled/templates/kcfinder_config_php.tmpl
@@ -90,7 +90,7 @@ $_CONFIG = array(
     'cookiePrefix' => 'KCFINDER_',
 
     // THE FOLLOWING SETTINGS CANNOT BE OVERRIDED WITH SESSION CONFIGURATION
-    '_check4htaccess' => true,
+    '_check4htaccess' => false,
     '_tinyMCEPath' => "<!-- tmpl_var i_tinyMCEPath -->",
 
     '_sessionVar' => &$_SESSION['KCFINDER'],
