--- a/dada/templates/report_abuse.tmpl
+++ b/dada/templates/report_abuse.tmpl
@@ -9,7 +9,7 @@
 <fieldset> 
     <legend>Abuse Report on: <!-- tmpl_var list_settings.list_name --></legend> 
     <p>
-        <label for="abuse_report_details">Please briefly describe the problems you are experiencing:</label><br /> 
+        <label for="abuse_report_details">Please briefly describe the problems of abuse you are experiencing:</label><br /> 
         <textarea rows="8" cols="40" name="abuse_report_details" id="abuse_report_details"></textarea>
     </p>
     <div class="buttonfloat"> 
