--- a/dada/templates/subscription_options_screen.tmpl
+++ b/dada/templates/subscription_options_screen.tmpl
@@ -23,8 +23,33 @@
 	Membership &#187; View
 	</legend>
 	<p>
-	 Show <!-- tmpl_var vlsn_menu --> addresses at a time, in the <strong> Membership &#187; View</strong> screen.
+	 Show <!-- tmpl_var vlsn_menu --> addresses at a time.
 	</p>
+	
+	<table cellpadding="5">
+      <tr>
+       <td width="25">
+        <p>
+         <input type="checkbox" name="view_list_show_timestamp_col" id="view_list_show_timestamp_col" value="1" <!-- tmpl_if list_settings.view_list_show_timestamp_col -->checked="checked"<!--/tmpl_if--> />
+        </p>
+       </td>
+       <td>
+        <p>
+         <label for="view_list_show_timestamp_col">
+          Show, &quot;Subscription Date&quot; Column
+         </label>
+        </p>
+       </td>
+      </tr>
+     </table>
+
+
+ 	<p>
+ 	 <label for="view_list_order_by">Order by:</label>
+ 	 <!-- tmpl_var view_list_order_by_menu --> 
+ 	 <!-- tmpl_var view_list_order_by_direction_menu -->
+ 	</p>
+
 
 </fieldset>
 	
@@ -82,7 +107,7 @@
 	  Invitations
  </legend>
 
- <table>
+ <table cellpadding="5">
    <tr>
     <td>
      <p>
