tiny change in copy

--- a/dada/templates/list_options_screen.tmpl
+++ b/dada/templates/list_options_screen.tmpl
@@ -46,7 +46,7 @@
 	      Public Mailing List
 	     </label>
 	     <br /> 
-	     Used for marketing, public discussion lists, and mailing lists. 
+	     Used for marketing, public discussion lists, and public mailing lists. 
         </p>
 	    <p>
 	     <ul> 
@@ -73,7 +73,7 @@
 	      Private Mailing List
 	     </label>
  	     <br /> 
- 	     Used for internal mailing lists. 
+ 	     Used for internal mailing lists, and private discussion lists. 
          </p>
  	    <p>
 	     <ul>
