--- a/dada/templates/add_email_screen.tmpl
+++ b/dada/templates/add_email_screen.tmpl
@@ -108,11 +108,11 @@
  <input type="hidden" name="return_address" value="<!-- tmpl_var return_address -->" />
  
 
-<!-- tmpl_if not_subscribed -->
+<!-- tmpl_if filtered_addresses -->
 
 <fieldset> 
  <legend>
-  Verified Addresses
+  All Addresses!
  </legend>
 
 
@@ -143,461 +143,48 @@
 <!--/tmpl_loop --> 
 
   </tr>
-  
-  <!-- tmpl_loop name="not_subscribed" -->
-
-	<tr <!-- tmpl_if __odd__ -->class="alt"<!--/tmpl_if-->>     
-		<td width="25">
-      <input type="checkbox" name="address" value="<!-- tmpl_var csv_info escape="HTML" -->" id="<!-- tmpl_var email escape="HTML" -->" checked="checked" />
-     </td>
-     <td>
-      <p>
-<label for="<!-- tmpl_var email  escape="HTML" -->">
-       <!-- tmpl_var email  escape="HTML" -->
-</label>
-      </p>
-     </td>
-
-     <!-- tmpl_loop name="fields" --> 
-        
-        <td>
-         <p>
-          <!-- tmpl_var value default="&nbsp;" escape="HTML"  -->
-         </p>
-        </td>
-    <!-- /tmpl_loop --> 
-  </tr>
-  
-  <!-- tmpl_if __last__ --> 
-  
-  </table>
-  <p style="text-align:right"><strong>Total:</strong> <!-- tmpl_var __counter__ -->&nbsp;</p> 
-  
-  <!-- /tmpl_if --> 
-  
-<!-- /tmpl_loop -->
-
-
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-</div>
-
-
-</fieldset> 
-
-	 
-	 
-<!--/tmpl_if-->
- 
-
-<!-- tmpl_if list_settings.black_list -->
-	 
-	<!-- tmpl_if black_listed -->
-
-
-<fieldset> 
- <legend>
-  Black Listed Addresses
- </legend>
  
  
-		 <p>
-		  These addresses are 
-		  <strong>
-		   black listed.
-		  </strong>
-		
-		<!-- tmpl_if list_settings.allow_admin_to_subscribe_blacklisted --> 
-		  	They will not be added/invited unless they are manually checked:
-		
-		<!-- tmpl_else --> 
-		
-		They will not be added/invited. 
-	  	
-		
-		<!-- /tmpl_if --> 
-		
-		 </p>
-	
-		  
-		  
-<div style="max-height: 200px; overflow: auto; border:1px solid black;background:#fff">
+    <!-- tmpl_loop filtered_addresses -->
 
- <table class="stripedtable">
-  <tr>
-   <td width="25">
-    <p>&nbsp;</p>
-   </td>
-   <td>
-   <p>
-    <strong>
-     Email
-   </strong>
-  </p>
- </td>
+  	<tr <!-- tmpl_if __odd__ -->class="alt"<!--/tmpl_if-->>     
+  		<td width="25">
+        <input type="checkbox" name="address" value="<!-- tmpl_var csv_info escape="HTML" -->" id="<!-- tmpl_var email escape="HTML" -->" checked="checked" />
+       </td>
+       <td>
+        <p>
+  <label for="<!-- tmpl_var email  escape="HTML" -->">
+         <!-- tmpl_var email  escape="HTML" -->
+  </label>
+        </p>
+       </td>
 
-<!-- tmpl_loop name="field_names" --> 
-    
-    <td>
-     <p>
-      <strong>
-       <!-- tmpl_var name --> 
-      </strong>
-     </p>
-    </td> 
-<!--/tmpl_loop --> 
+       <!-- tmpl_loop name="fields" --> 
 
-  </tr>
-  
-  <!-- tmpl_loop name="black_listed" -->
+          <td>
+           <p>
+            <!-- tmpl_var value default="&nbsp;" escape="HTML"  -->
+           </p>
+          </td>
+      <!-- /tmpl_loop --> 
+    </tr>
 
-    <tr <!-- tmpl_if __odd__ -->class="alt"<!--/tmpl_if-->>
-     <td width="25">
-      <!-- tmpl_if list_settings.allow_admin_to_subscribe_blacklisted --> 
-		<input type="checkbox" name="address" value="<!-- tmpl_var csv_info escape="HTML" -->" id="<!-- tmpl_var email escape="HTML" -->" />
-		<!-- tmpl_else --> 
-		&nbsp;
-		<!-- /tmpl_if --> 
-     </td>
-     <td>
-      <p>
-<label for="<!-- tmpl_var email escape="HTML" -->">
-       <!-- tmpl_var email escape="HTML" -->
-</label>
-      </p>
-     </td>
+    <!-- tmpl_if __last__ --> 
 
-     <!-- tmpl_loop name="fields" --> 
-        
-        <td>
-         <p>
-          <!-- tmpl_var value default="&nbsp;" escape="HTML" -->
-         </p>
-        </td>
-    <!-- /tmpl_loop --> 
-  </tr>
+    </table>
+    <p style="text-align:right"><strong>Total:</strong> <!-- tmpl_var __counter__ -->&nbsp;</p> 
+
+    <!-- /tmpl_if --> 
+
+  <!-- /tmpl_loop -->
+
+
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  </div>
  
  
-   <!-- tmpl_if __last__ --> 
-  
-  </table>
-  <p style="text-align:right"><strong>Total:</strong> <!-- tmpl_var __counter__ -->&nbsp;</p> 
-  
-  <!-- /tmpl_if --> 
-  
-  
-<!-- /tmpl_loop -->
-
-
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-</div>
-
-</fieldset> 
-
-<!--/tmpl_if-->
-	
-<!--/tmpl_if-->
-
-
-
-<!-- tmpl_if list_settings.enable_white_list --> 
-
-<!-- 
-	<p> White list is enabled.</p> 
---> 
-
-    <!-- tmpl_if not_white_listed --> 
-
-<!-- 
-	<p>There's un-white listed subscribers to show </p> 
---> 
-
-<fieldset> 
- <legend>
- Not White Listed Addresses
- </legend>
  
- 
-    <p>These addresses are not included on your 
-		  <strong>
-		   white list.
-		  </strong>
-		  They will not be added/invited unless they are manually checked:
-		 </p>    
-
-
-<div style="max-height: 200px; overflow: auto; border:1px solid black;background:#fff">
-
- <table class="stripedtable">
-  <tr>
-   <td width="25">
-    <p>&nbsp;</p>
-   </td>
-   <td>
-   <p>
-    <strong>
-     Email
-   </strong>
-  </p>
- </td>
-
-<!-- tmpl_loop name="field_names" --> 
-    
-    <td>
-     <p>
-      <strong>
-       <!-- tmpl_var name --> 
-      </strong>
-     </p>
-    </td> 
-<!--/tmpl_loop --> 
-
-  </tr>
-  
-  <!-- tmpl_loop name="not_white_listed" -->
-
-    <tr <!-- tmpl_if __odd__ -->class="alt"<!--/tmpl_if-->>
-     <td width="25">
-      <input type="checkbox" name="address" value="<!-- tmpl_var csv_info escape="HTML" -->" id="<!-- tmpl_var email escape="HTML" -->" />
-     </td>
-     <td>
-      <p>
-<label for="<!-- tmpl_var email escape="HTML" -->">
-       <!-- tmpl_var email escape="HTML" -->
-</label>
-      </p>
-     </td>
-
-     <!-- tmpl_loop name="fields" --> 
-        
-        <td>
-         <p>
-          <!-- tmpl_var value escape="HTML" default="&nbsp;"  -->
-         </p>
-        </td>
-    <!-- /tmpl_loop --> 
-  </tr>
-
-  <!-- tmpl_if __last__ --> 
-  
-  </table>
-  <p style="text-align:right"><strong>Total:</strong> <!-- tmpl_var __counter__ -->&nbsp;</p> 
-  
-
-
-
-
-  <!-- /tmpl_if --> 
-  
-<!-- /tmpl_loop -->
-
-
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-</div>
-
-
-</fieldset> 
-
-<!-- tmpl_else --> 
-
-	<!--
-		<p>There's NO un-white listed subscribers to show </p> 
-	--> 
-
-<!--/tmpl_if--> 
-
-
-<!-- tmpl_else --> 
-
-	<!-- 
-		<p> White list is NOT enabled.</p>
-	--> 
-
-<!--/tmpl_if-->
-
-
-
-
-
-<!-- tmpl_if subscribed -->
-	
-	
-	<fieldset> 
-	 <legend>
-		Subscribed Already
-	</legend> 
-	 
-	<p>
-	 These addresses are already subscribed to your list. They will not be added/invited again:
-	</p>
-	
-
-
-<div style="max-height: 200px; overflow: auto; border:1px solid black;background:#fff">
-
- <table class="stripedtable">
-  <tr>
-   <td width="25">
-    <p>&nbsp;</p>
-   </td>
-   <td>
-   <p>
-    <strong>
-     Email
-   </strong>
-  </p>
- </td>
-
-<!-- tmpl_loop name="field_names" --> 
-    
-    <td>
-     <p>
-      <strong>
-       <!-- tmpl_var name --> 
-      </strong>
-     </p>
-    </td> 
-<!--/tmpl_loop --> 
-
-  </tr>
-  
-  <!-- tmpl_loop name="subscribed" -->
-
-    <tr <!-- tmpl_if __odd__ -->class="alt"<!--/tmpl_if-->>
-     <td width="25">
-      &nbsp;
-     </td>
-     <td>
-      <p>
-<label for="<!-- tmpl_var email escape="HTML" -->">
-       <!-- tmpl_var email escape="HTML" -->
-</label>
-      </p>
-     </td>
-
-     <!-- tmpl_loop name="fields" --> 
-        
-        <td>
-         <p>
-          <!-- tmpl_var value default="&nbsp;" escape="HTML"  -->
-         </p>
-        </td>
-    <!-- /tmpl_loop --> 
-  </tr>
-
-  <!-- tmpl_if __last__ --> 
-  
-  </table>
-  <p style="text-align:right"><strong>Total:</strong> <!-- tmpl_var __counter__ -->&nbsp;</p> 
-  
-  <!-- /tmpl_if --> 
-  
-<!-- /tmpl_loop -->
-
-
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-</div>
-
-</fieldset> 
-	
-<!--/tmpl_if-->
-
-
-<!-- tmpl_if invalid -->
-
-
-<fieldset> 
- <legend>
-Invalid Email Addresses
- </legend>
- 
- 
-	<p>
-	 These addresses did not go through validation successfully. They will not be added/invited. 
-	 </p>
-	
-	<div style="max-height: 200px; overflow: auto; border:1px solid black;background:#fff">
-
- <table class="stripedtable">
-  <tr>
-   <td width="25">
-    <p>&nbsp;</p>
-   </td>
-   <td>
-   <p>
-    <strong>
-     Email
-   </strong>
-  </p>
- </td>
-
-<!-- tmpl_loop name="field_names" --> 
-    
-    <td>
-     <p>
-      <strong>
-       <!-- tmpl_var name --> 
-      </strong>
-     </p>
-    </td> 
-<!--/tmpl_loop --> 
-
-  </tr>
-  
-  <!-- tmpl_loop name="invalid" -->
-
-    <tr <!-- tmpl_if __odd__ -->class="alt"<!--/tmpl_if-->>
-     <td width="25">
-&nbsp;     </td>
-     <td>
-      <p>
-<label for="<!-- tmpl_var email escape="HTML" -->">
-       <!-- tmpl_var email escape="HTML" -->
-</label>
-      </p>
-     </td>
-
-     <!-- tmpl_loop name="fields" --> 
-        
-        <td>
-         <p>
-          <!-- tmpl_var value default="&nbsp;" escape="HTML"  -->
-         </p>
-        </td>
-    <!-- /tmpl_loop --> 
-  </tr>
-
-  <!-- tmpl_if __last__ --> 
-  
-  </table>
-  <p style="text-align:right"><strong>Total:</strong> <!-- tmpl_var __counter__ -->&nbsp;</p> 
-  
-  <!-- /tmpl_if --> 
-  
-<!-- /tmpl_loop -->
-
-
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-</div>
-
-</fieldset> 
-
-<!-- /tmpl_if --> 
-
-<!-- tmpl_if not_subscribed --> 
-	<!-- ... -->
-<!-- tmpl_else --> 
-	<div class="badweatherbox">
-	<p> 
-		No addresses have passed verification. 
-	</p> 
-</div>
-<!-- /tmpl_if -->
-
 	 <div class="buttonfloat">
 
 	<!-- tmpl_if chrome --> 
@@ -619,9 +206,6 @@ Invalid Email Addresses
 	<!-- /tmpl_if -->
 	 </div>
 	 <div class="floatclear"></div>
-
-	
-
 
 
  </form>
